fixed csv file load

--- a/LoanStatusPrediction.ipynb
+++ b/LoanStatusPrediction.ipynb
@@ -71,7 +71,7 @@
       "cell_type": "code",
       "source": [
         "# load the csv to pandas df\n",
-        "loan_df = pd.read_csv(\"/content/train_u6lujuX_CVtuZ9i (1).csv\")"
+        "loan_df = pd.read_csv(\"/content/loan_data.csv\")"
       ],
       "metadata": {
         "id": "P03d6tF-8adR"
@@ -90,7 +90,7 @@
           "height": 243
         },
         "id": "SdBncXF38uuG",
-        "outputId": "8eea331c-d040-4ab7-baa3-cff708f5f2a0"
+        "outputId": "99667c01-5cc5-4fcf-a896-1d5137eb304c"
       },
       "execution_count": null,
       "outputs": [
@@ -121,7 +121,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-ff5be7ad-4513-42e7-870a-2662d6ad3294\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-f35fd8ea-b3e8-448a-b629-f24cbdbbfdeb\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -242,7 +242,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ff5be7ad-4513-42e7-870a-2662d6ad3294')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f35fd8ea-b3e8-448a-b629-f24cbdbbfdeb')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -294,12 +294,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-ff5be7ad-4513-42e7-870a-2662d6ad3294 button.colab-df-convert');\n",
+              "        document.querySelector('#df-f35fd8ea-b3e8-448a-b629-f24cbdbbfdeb button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-ff5be7ad-4513-42e7-870a-2662d6ad3294');\n",
+              "        const element = document.querySelector('#df-f35fd8ea-b3e8-448a-b629-f24cbdbbfdeb');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -319,10 +319,10 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-a7228a17-5961-4a77-9ab8-c45c9c211381\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-a7228a17-5961-4a77-9ab8-c45c9c211381')\"\n",
-              "            title=\"Suggest charts\"\n",
-              "            style=\"display:none;\">\n",
+              "    <div id=\"df-0208adf4-db0d-4bc8-914b-6bea7acbecfd\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-0208adf4-db0d-4bc8-914b-6bea7acbecfd')\"\n",
+              "                title=\"Suggest charts\"\n",
+              "                style=\"display:none;\">\n",
               "\n",
               "<svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
               "     width=\"24px\">\n",
@@ -330,7 +330,7 @@
               "        <path d=\"M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z\"/>\n",
               "    </g>\n",
               "</svg>\n",
-              "  </button>\n",
+              "      </button>\n",
               "\n",
               "<style>\n",
               "  .colab-df-quickchart {\n",
@@ -422,29 +422,29 @@
               "  }\n",
               "</style>\n",
               "\n",
-              "  <script>\n",
-              "    async function quickchart(key) {\n",
-              "      const quickchartButtonEl =\n",
-              "        document.querySelector('#' + key + ' button');\n",
-              "      quickchartButtonEl.disabled = true;  // To prevent multiple clicks.\n",
-              "      quickchartButtonEl.classList.add('colab-df-spinner');\n",
-              "      try {\n",
-              "        const charts = await google.colab.kernel.invokeFunction(\n",
-              "            'suggestCharts', [key], {});\n",
-              "      } catch (error) {\n",
-              "        console.error('Error during call to suggestCharts:', error);\n",
-              "      }\n",
-              "      quickchartButtonEl.classList.remove('colab-df-spinner');\n",
-              "      quickchartButtonEl.classList.add('colab-df-quickchart-complete');\n",
-              "    }\n",
-              "    (() => {\n",
-              "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-a7228a17-5961-4a77-9ab8-c45c9c211381 button');\n",
-              "      quickchartButtonEl.style.display =\n",
-              "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
-              "    })();\n",
-              "  </script>\n",
-              "</div>\n",
+              "      <script>\n",
+              "        async function quickchart(key) {\n",
+              "          const quickchartButtonEl =\n",
+              "            document.querySelector('#' + key + ' button');\n",
+              "          quickchartButtonEl.disabled = true;  // To prevent multiple clicks.\n",
+              "          quickchartButtonEl.classList.add('colab-df-spinner');\n",
+              "          try {\n",
+              "            const charts = await google.colab.kernel.invokeFunction(\n",
+              "                'suggestCharts', [key], {});\n",
+              "          } catch (error) {\n",
+              "            console.error('Error during call to suggestCharts:', error);\n",
+              "          }\n",
+              "          quickchartButtonEl.classList.remove('colab-df-spinner');\n",
+              "          quickchartButtonEl.classList.add('colab-df-quickchart-complete');\n",
+              "        }\n",
+              "        (() => {\n",
+              "          let quickchartButtonEl =\n",
+              "            document.querySelector('#df-0208adf4-db0d-4bc8-914b-6bea7acbecfd button');\n",
+              "          quickchartButtonEl.style.display =\n",
+              "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "        })();\n",
+              "      </script>\n",
+              "    </div>\n",
               "\n",
               "    </div>\n",
               "  </div>\n"
@@ -456,7 +456,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 3
         }
       ]
     },
@@ -470,7 +470,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "X91CFE2g8wtf",
-        "outputId": "ba52cc96-ce02-4fd3-f422-82bf1946acf4"
+        "outputId": "fd86d806-89b0-4f2e-b1c3-c3f6b4b859fb"
       },
       "execution_count": null,
       "outputs": [
@@ -513,7 +513,7 @@
           "height": 300
         },
         "id": "utOiw8tU86MD",
-        "outputId": "45a3eb90-0472-4172-f776-0a20192811c4"
+        "outputId": "bf82b52f-5fee-4353-92a2-46825e4cfd83"
       },
       "execution_count": null,
       "outputs": [
@@ -543,7 +543,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-1738f520-e22d-49af-a7a1-6cd91eb8c1d1\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-2b166e10-f657-4ac5-8df5-d28880165910\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -640,7 +640,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1738f520-e22d-49af-a7a1-6cd91eb8c1d1')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2b166e10-f657-4ac5-8df5-d28880165910')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -692,12 +692,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-1738f520-e22d-49af-a7a1-6cd91eb8c1d1 button.colab-df-convert');\n",
+              "        document.querySelector('#df-2b166e10-f657-4ac5-8df5-d28880165910 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-1738f520-e22d-49af-a7a1-6cd91eb8c1d1');\n",
+              "        const element = document.querySelector('#df-2b166e10-f657-4ac5-8df5-d28880165910');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -717,10 +717,10 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-4ce55ad3-e319-4e63-8747-4667fd796a2c\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-4ce55ad3-e319-4e63-8747-4667fd796a2c')\"\n",
-              "            title=\"Suggest charts\"\n",
-              "            style=\"display:none;\">\n",
+              "    <div id=\"df-61382ee4-745d-488a-bfd9-0b8c3c9ad88e\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-61382ee4-745d-488a-bfd9-0b8c3c9ad88e')\"\n",
+              "                title=\"Suggest charts\"\n",
+              "                style=\"display:none;\">\n",
               "\n",
               "<svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
               "     width=\"24px\">\n",
@@ -728,7 +728,7 @@
               "        <path d=\"M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z\"/>\n",
               "    </g>\n",
               "</svg>\n",
-              "  </button>\n",
+              "      </button>\n",
               "\n",
               "<style>\n",
               "  .colab-df-quickchart {\n",
@@ -820,29 +820,29 @@
               "  }\n",
               "</style>\n",
               "\n",
-              "  <script>\n",
-              "    async function quickchart(key) {\n",
-              "      const quickchartButtonEl =\n",
-              "        document.querySelector('#' + key + ' button');\n",
-              "      quickchartButtonEl.disabled = true;  // To prevent multiple clicks.\n",
-              "      quickchartButtonEl.classList.add('colab-df-spinner');\n",
-              "      try {\n",
-              "        const charts = await google.colab.kernel.invokeFunction(\n",
-              "            'suggestCharts', [key], {});\n",
-              "      } catch (error) {\n",
-              "        console.error('Error during call to suggestCharts:', error);\n",
-              "      }\n",
-              "      quickchartButtonEl.classList.remove('colab-df-spinner');\n",
-              "      quickchartButtonEl.classList.add('colab-df-quickchart-complete');\n",
-              "    }\n",
-              "    (() => {\n",
-              "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-4ce55ad3-e319-4e63-8747-4667fd796a2c button');\n",
-              "      quickchartButtonEl.style.display =\n",
-              "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
-              "    })();\n",
-              "  </script>\n",
-              "</div>\n",
+              "      <script>\n",
+              "        async function quickchart(key) {\n",
+              "          const quickchartButtonEl =\n",
+              "            document.querySelector('#' + key + ' button');\n",
+              "          quickchartButtonEl.disabled = true;  // To prevent multiple clicks.\n",
+              "          quickchartButtonEl.classList.add('colab-df-spinner');\n",
+              "          try {\n",
+              "            const charts = await google.colab.kernel.invokeFunction(\n",
+              "                'suggestCharts', [key], {});\n",
+              "          } catch (error) {\n",
+              "            console.error('Error during call to suggestCharts:', error);\n",
+              "          }\n",
+              "          quickchartButtonEl.classList.remove('colab-df-spinner');\n",
+              "          quickchartButtonEl.classList.add('colab-df-quickchart-complete');\n",
+              "        }\n",
+              "        (() => {\n",
+              "          let quickchartButtonEl =\n",
+              "            document.querySelector('#df-61382ee4-745d-488a-bfd9-0b8c3c9ad88e button');\n",
+              "          quickchartButtonEl.style.display =\n",
+              "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "        })();\n",
+              "      </script>\n",
+              "    </div>\n",
               "\n",
               "    </div>\n",
               "  </div>\n"
@@ -853,7 +853,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 5
         }
       ]
     },
@@ -868,7 +868,7 @@
           "height": 492
         },
         "id": "t8NttV539EDo",
-        "outputId": "0c9d09e8-dcc7-421f-f210-0fa556febc9d"
+        "outputId": "d95aa36f-61d0-433e-ac41-49be80f1d238"
       },
       "execution_count": null,
       "outputs": [
@@ -972,7 +972,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 6
         }
       ]
     },
@@ -987,7 +987,7 @@
           "height": 178
         },
         "id": "KB0NBfLz9LZf",
-        "outputId": "a1aa3fb5-415f-440c-c0fa-54a3253ca494"
+        "outputId": "2e59c041-5442-4a91-b68c-fe4750e1945e"
       },
       "execution_count": null,
       "outputs": [
@@ -1041,7 +1041,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 7
         }
       ]
     },
@@ -1058,7 +1058,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xqqSmpzw91_F",
-        "outputId": "978181b4-1024-49a0-db4b-7e1a82e1221f"
+        "outputId": "6671c2f1-827d-4c12-f02e-a7a33efed44d"
       },
       "execution_count": null,
       "outputs": [
